--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,29 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!--Favicon -->
+    <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico" />
+    <!--google fonts-->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap"
+      rel="stylesheet"
+    />
     <title>React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+
+    <!-- jquery -->
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <!-- change navbar color when scrolling -->
+    <script>
+      $(function() {
+        $(document).scroll(function() {
+          var $nav = $("nav");
+          $nav.toggleClass("scrolled", $(this).scrollTop() > $nav.height());
+        });
+      });
+    </script>
   </body>
 </html>
