--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,14 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="I am a highly motivated Blockchain and Web developer. I use Javascript to build web/desktop/mobile applications."
+    />
+    <meta
+      name="keywords"
+      content="blockchain, javascript, web, developer, student, computer science, programming"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico" />
     <!--google fonts-->
     <link
       href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap"
@@ -25,7 +27,7 @@
       integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
       crossorigin="anonymous"
     />
-    <title>React App</title>
+    <title>Jovan Shandro</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -35,8 +37,8 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <!-- change navbar color when scrolling -->
     <script>
-      $(function() {
-        $(document).scroll(function() {
+      $(function () {
+        $(document).scroll(function () {
           var $nav = $("nav");
           $nav.toggleClass("scrolled", $(this).scrollTop() > $nav.height());
         });
